# nhs-index-tool

./: README.md  __init__.py  __main__.py  pyproject.toml
src/nhsjobsearch/: config.py  cronreindex.py  cvextract.py  database.py  display.py  dwpconnector.py  indeedconnector.py  jobitem.py  main.py  nhsconnector.py  promptgen.py  whatsappbot.py
tests/: testcron.py  testcvextract.py  testindeed.py  testparsing.py  testpromptgen.py  testwhatsappbot.py
